Fix distance slice algorithm

--- a/notebooks/WallStudy.ipynb
+++ b/notebooks/WallStudy.ipynb
@@ -366,56 +366,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from constants import SPEED_OF_SOUND\n",
-    "\n",
-    "# matrix = df_matrix\n",
-    "matrix = df_matrix_theo\n",
-    "\n",
-    "# frequencies_slices = [671, 3125, 4156, 8000]\n",
-    "frequencies_slices = [1750, 2375, 3125, 3875]\n",
-    "# frequencies_slices = [703 * (i + 1) for i in range(4)]\n",
-    "# frequencies_slices = [359,  703, 1406]\n",
-    "\n",
-    "max_distance = 60\n",
-    "fig, axs = plt.subplots(len(frequencies_slices), sharey=True, sharex=True)\n",
-    "fig.suptitle(\"distance slices\", y=0.95)\n",
-    "fig.set_size_inches(10, 5)\n",
-    "for i, f in enumerate(frequencies_slices):\n",
-    "    idx = np.argmin(np.abs(frequencies - f))\n",
-    "    slice_ = matrix[idx, distances < max_distance]\n",
-    "    # slice_ -= np.mean(slice_)\n",
-    "\n",
-    "    d_constr = SPEED_OF_SOUND / (2 * f) * 100\n",
-    "    axs[i].plot(\n",
-    "        distances[distances < max_distance],\n",
-    "        slice_,\n",
-    "        label=f\"{f}Hz, period={d_constr:.0f}cm\",\n",
-    "    )\n",
-    "    axs[i].set_ylabel(\"response\")\n",
-    "    axs[i].legend(loc=\"upper right\")\n",
-    "\n",
-    "    # peak from constr. interference is expected when the wavelength equals k * distance/2\n",
-    "    # wavelength_constr = c / f_constr = distance / 2\n",
-    "    num_peaks = (distances[-1] - distances[0]) // d_constr + 1\n",
-    "    [axs[i].axvline(x=d, color=\"C1\") for d in np.arange(num_peaks) * d_constr]\n",
-    "\n",
-    "    fft = np.fft.rfft(slice_)[1:]\n",
-    "    df = np.mean(distances[1:] - distances[:-1])\n",
-    "    freq = np.fft.rfftfreq(len(slice_), df)[1:]\n",
-    "\n",
-    "    plt.figure()\n",
-    "    plt.plot(1 / freq, np.abs(fft))\n",
-    "    plt.axvline(d_constr, color=\"C1\")\n",
-    "axs[-1].set_xlabel(\"distance [cm]\")\n",
-    "fig.savefig(\"plots/distance-frequency-matrix-algorithm.pdf\", bbox_inches=\"tight\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -431,7 +381,7 @@
    "outputs": [],
    "source": [
     "from wall_detector import get_probability_cost, get_probability_fft\n",
-    "from simulation import get_deltas_from_global\n",
+    "from simulation import get_deltas_from_global, SPEED_OF_SOUND\n",
     "\n",
     "#distance_slices = [5, 10, 20, 30, 40, 50]\n",
     "distance_slices = [10, 30, 60, 70, 80]\n",
@@ -523,7 +473,7 @@
     "                                mic_idx)\n",
     "\n",
     "fig, ax = plt.subplots()\n",
-    "ax.pcolorfast(deltas, frequencies, matrix[:-1, :-1])\n",
+    "ax.pcolorfast(deltas, frequencies, df_matrix_theo[:-1, :-1])\n",
     "ax.axvline(nominal_delta, color='C1')\n",
     "ax.scatter(deltas_noisy, freq_sparse, color='C1')\n",
     "ax.set_ylim(min(freq_sparse), max(freq_sparse))\n",
@@ -548,6 +498,117 @@
     "plt.plot(distances_grid, probs_rel, label='account for mvmt')\n",
     "plt.yscale('log')\n",
     "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### distance slice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import itertools\n",
+    "from wall_detector import get_approach_angle_fft, get_approach_angle_cost\n",
+    "from simulation import get_orthogonal_distance_from_global\n",
+    "\n",
+    "yaw_deg = 0\n",
+    "mic_idx = 1\n",
+    "n_methods = 2\n",
+    "\n",
+    "frequencies = [2000, 3000, 4000]  # 500, 1000, 2000, 3000, 4000]\n",
+    "relative_distances_cm = np.arange(20, step=1.0)\n",
+    "start_distances_grid = np.arange(30, 50)\n",
+    "gammas_grid_deg = np.arange(90)\n",
+    "\n",
+    "gammas_deg = [30, 60, 90, -30]\n",
+    "start_distances_cm = [40]\n",
+    "\n",
+    "sigma_delta_m = 1e-5\n",
+    "sigma_y = 1e-3\n",
+    "\n",
+    "fig, ax_slice = plt.subplots()\n",
+    "fig, ax_fft = plt.subplots()\n",
+    "for start_distance, gamma_deg in itertools.product(start_distances_cm, gammas_deg):\n",
+    "    i = 0\n",
+    "\n",
+    "    distances_cm = start_distance - relative_distances_cm * np.sin(\n",
+    "        gamma_deg / 180 * np.pi\n",
+    "    )\n",
+    "    deltas_m, d0 = get_deltas_from_global(yaw_deg, distances_cm, mic_idx)\n",
+    "    for frequency in frequencies:\n",
+    "        label = f\"{frequency}Hz, {start_distance}cm\"\n",
+    "        deltas_m_noisy = (\n",
+    "            deltas_m + np.random.normal(scale=sigma_delta_m, size=len(deltas_m)) * 1e-2\n",
+    "        )\n",
+    "        slice_d = get_df_theory_simple(deltas_m_noisy, [frequency], flat=True, d0=d0)\n",
+    "        ax_slice.plot(deltas_m_noisy, slice_d, label=frequency, color=f\"C{i}\")\n",
+    "        slice_d += np.random.normal(scale=sigma_y, size=len(slice_d))\n",
+    "        ax_slice.plot(deltas_m_noisy, slice_d, label=frequency, color=f\"C{i}\", ls=\":\")\n",
+    "\n",
+    "        n = max(len(slice_d), 1000)\n",
+    "        d_meters = 1e-2 * (relative_distances_cm[1] - relative_distances_cm[0])\n",
+    "        dist_f = np.fft.rfftfreq(n=n, d=d_meters)\n",
+    "        fft = np.fft.rfft(slice_d - np.mean(slice_d), n=n)\n",
+    "\n",
+    "        ax_fft.plot(dist_f, np.abs(fft), label=frequency, color=f\"C{i}\")  # 1/m\n",
+    "\n",
+    "        k_max = np.argmax(np.abs(fft))\n",
+    "        max_dist_f = dist_f[k_max]  # 1/m\n",
+    "        period_90 = SPEED_OF_SOUND / (2 * frequency)  # 1/m\n",
+    "        period_here = 1 / max_dist_f  # m\n",
+    "        period_analytical = (d_meters * n) / k_max\n",
+    "        assert np.abs(period_here - period_analytical) < 1e-10\n",
+    "        # print(\"measured here [1/m]\", period_here)\n",
+    "        # print(\"perpendicular [1/m]\", period_90)\n",
+    "        # print(\"nyquist: [1/m]\", 1/(2*d_meters))\n",
+    "        sin_gamma = period_90 / period_here\n",
+    "        print(\"sin:\", np.arcsin(sin_gamma) * 180 / np.pi)\n",
+    "\n",
+    "        sines_gamma, probs_fft = get_approach_angle_fft(\n",
+    "            slice_d, frequency, relative_distances_cm\n",
+    "        )\n",
+    "        gammas_fft = np.arcsin(sines_gamma) * 180 / np.pi\n",
+    "\n",
+    "        probs_cost = get_approach_angle_cost(\n",
+    "            slice_d,\n",
+    "            frequency,\n",
+    "            relative_distances_cm,\n",
+    "            start_distances_grid,\n",
+    "            gammas_grid_deg,\n",
+    "            mic_idx=mic_idx,\n",
+    "            #ax=ax,\n",
+    "        )  # is of shape n_start_distances x n_gammas_grid\n",
+    "        slice_d_norm = slice_d - np.mean(slice_d)\n",
+    "        slice_d_norm /= np.std(slice_d_norm)\n",
+    "\n",
+    "        fig, ax = plt.subplots()\n",
+    "        ax.pcolorfast(start_distances_grid, gammas_grid_deg, probs_cost.T)\n",
+    "        ax.set_xlabel(\"start distance [cm]\")\n",
+    "        ax.set_ylabel(\"gamma [deg]\")\n",
+    "\n",
+    "        plt.figure()\n",
+    "        gamma_max_fft = gammas_fft[np.argmax(probs_fft)]\n",
+    "        plt.plot(gammas_fft, probs_fft, label=\"fft\", color=f\"C0\")\n",
+    "        plt.axvline(gamma_max_fft, color=f\"C0\")\n",
+    "        \n",
+    "        flat_idx = np.argmax(probs_cost)\n",
+    "        distance_idx, gamma_idx = np.unravel_index(flat_idx, probs_cost.shape)\n",
+    "        gamma_max_cost = gammas_grid_deg[gamma_idx]\n",
+    "        probs_cost_sum = np.max(probs_cost, axis=0)\n",
+    "        probs_cost_sum /= np.sum(probs_cost_sum)\n",
+    "        plt.plot(gammas_grid_deg, probs_cost_sum, label=\"cost\", color=f\"C1\")\n",
+    "        plt.axvline(gamma_max_cost, color=f\"C1\")\n",
+    "        \n",
+    "        plt.title(f\"frequency={frequency}Hz, $\\gamma$={gamma_deg}deg\")\n",
+    "        i += 1\n",
+    "ax_slice.legend()\n",
+    "ax_fft.legend()"
    ]
   },
   {
@@ -926,6 +987,17 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"angle_noise\"\n",
+    "results_df = pd.read_pickle(f'results/simulation/{name}.pkl')\n",
+    "results_df"
+   ]
   },
   {
    "cell_type": "code",
