Remove window option and start refactor of gammas

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -132,8 +132,8 @@
    "source": [
     "# exp_name = '2021_02_09_wall_tukey';\n",
     "# exp_name = '2021_02_09_wall';\n",
-    "#exp_name = \"2021_02_23_wall\"\n",
-    "#exp_name = \"2021_02_25_wall\"\n",
+    "#exp_name = \"2021_02_23_wall\" # old buzzer\n",
+    "#exp_name = \"2021_02_25_wall\" # new buzzer\n",
     "#exp_name = \"2021_03_01_flying\"\n",
     "exp_name = '2021_02_19_windows';\n",
     "# exp_name = '2020_12_9_rotating';\n",
@@ -454,8 +454,8 @@
    "source": [
     "from wall_analysis import get_df_matrices, FILTERS\n",
     "\n",
-    "#exp_name = \"2021_02_25_wall\"\n",
-    "exp_name = \"2021_02_23_wall\"\n",
+    "exp_name = \"2021_02_25_wall\"\n",
+    "#exp_name = \"2021_02_23_wall\"\n",
     "\n",
     "fname = \"results/wall_analysis.pkl\"\n",
     "# method = 'dryrun'\n",
@@ -512,13 +512,13 @@
    "outputs": [],
    "source": [
     "from pandas_utils import filter_by_dict\n",
-    "exp_name = \"2021_02_23_wall\" # old buzzer\n",
-    "#exp_name = \"2021_02_25_wall\" # new buzzer\n",
+    "#exp_name = \"2021_02_23_wall\" # old buzzer\n",
+    "exp_name = \"2021_02_25_wall\" # new buzzer\n",
     "\n",
     "# mic_type = 'measurement'\n",
     "mic_type = \"audio_deck\"\n",
-    "motors = 'all45000'\n",
-    "#motors = 0 \n",
+    "#motors = 'all45000'\n",
+    "motors = 0 \n",
     "\n",
     "fname = f\"{exp_name}_{mic_type}_{motors}\"\n",
     "\n",
@@ -528,8 +528,29 @@
     "assert len(df) == 1\n",
     "row = df.iloc[0]\n",
     "\n",
-    "#distances_grid = np.arange(0, max_distance + 1)\n",
     "row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from wall_detector import prune_df_matrix\n",
+    "\n",
+    "\n",
+    "df_matrix, df_freq, indices = prune_df_matrix(\n",
+    "    row.df_matrix, row.df_freq, ratio_missing_allowed=0.2, verbose=True\n",
+    ")\n",
+    "\n",
+    "fig, ax_all = plt.subplots()\n",
+    "for mic_idx in range(4):\n",
+    "    fig, ax = plt.subplots()\n",
+    "    ax.pcolormesh(row.df_dist, row.df_freq, row.df_matrix[mic_idx])\n",
+    "    fig, ax = plt.subplots()\n",
+    "    ax.pcolormesh(row.df_dist, df_freq, df_matrix[mic_idx])\n",
+    "    ax_all.plot(df_freq, np.mean(df_matrix[mic_idx], axis=1), label=f'mic{mic_idx}')"
    ]
   },
   {
@@ -548,20 +569,9 @@
     "ax.set_title(\"old calibration\")\n",
     "fig, ax = plt.subplots()\n",
     "calib_function = get_calibration_function_dict(**filter_dict, ax=ax)\n",
+    "ax.set_ylim(1, 10)\n",
+    "ax.set_yscale(\"linear\")\n",
     "ax.set_title(\"new calibration\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from wall_detector import prune_df_matrix\n",
-    "\n",
-    "df_matrix, df_freq, indices = prune_df_matrix(\n",
-    "    row.df_matrix, row.df_freq, ratio_missing_allowed=0.5, verbose=True\n",
-    ")"
    ]
   },
   {
@@ -660,7 +670,7 @@
     "        fig.set_size_inches(5*len(chosen_mics), 5)\n",
     "        for i, mic_idx in enumerate(chosen_mics):\n",
     "            # heuristic\n",
-    "            gain_x = np.round(np.median(slice_exp[mic_idx, :]), 2)\n",
+    "            gain_x = np.median(slice_exp[mic_idx, :])\n",
     "            coeffs_h = [0.2, gain_x, 0]\n",
     "            slice_heur = get_dist_slice_theory(\n",
     "                f,\n",
@@ -678,7 +688,7 @@
     "            times.append(time.time() - t0)\n",
     "            axs[0, i].plot(row.df_dist, slice_exp[mic_idx, :], label=\"experimental\")\n",
     "            axs[0, i].plot(row.df_dist, slice_calib[:, 0], label=\"calibrated\")\n",
-    "            axs[0, i].plot(row.df_dist, slice_heur[:, 0], label=\"heuristic\")\n",
+    "            #axs[0, i].plot(row.df_dist, slice_heur[:, 0], label=\"heuristic\")\n",
     "            axs[0, i].set_title(f'mic{mic_idx}')\n",
     "            fitting_results.loc[len(fitting_results), :] = dict(\n",
     "                frequency=f,\n",
@@ -739,6 +749,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from simulation import factor_distance_to_delta\n",
+    "\n",
+    "for mic in range(4):\n",
+    "    print('mic', mic)\n",
+    "    for distance in np.arange(10, 50, step=10):\n",
+    "        f = factor_distance_to_delta(distance, mic)\n",
+    "        print(distance, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# distance slice algorithm\n",
     "from wall_detector import get_approach_angle_fft\n",
@@ -750,17 +782,16 @@
     "    plt.figure()\n",
     "    for mic_idx in range(df_matrix.shape[0]):\n",
     "        d_slice = df_matrix[mic_idx, i, :] \n",
-    "        cosines_gamma, prob = get_approach_angle_fft(d_slice, f, row.df_dist)\n",
-    "        cosine_gamma = cosines_gamma[np.argmax(prob)]\n",
-    "        gamma = np.arccos(cosine_gamma) * 180 / np.pi\n",
-    "        plt.plot(cosines_gamma, prob)\n",
-    "        plt.axvline(cosine_gamma, label=f'mic{mic_idx}: $\\\\gamma$={gamma:.1f}', color=f'C{mic_idx}')\n",
+    "        gammas, prob = get_approach_angle_fft(d_slice, f, row.df_dist, mic_idx,\n",
+    "                                              n_max=1000, bayes=False)\n",
+    "        gamma = gammas[np.argmax(prob)]\n",
+    "        plt.plot(gammas, prob)\n",
+    "        plt.axvline(gamma, label=f'mic{mic_idx}: $\\\\gamma$={gamma:.1f}', color=f'C{mic_idx}')\n",
     "        err_dict[f\"mic{mic_idx}\"][i] = gamma - gt_gamma\n",
     "        \n",
     "    plt.title(f'frequency {f:.0f}Hz')\n",
-    "    plt.xlabel('sine of angle of approach $\\\\gamma$')\n",
+    "    plt.xlabel('angle of approach $\\\\gamma$ [deg]')\n",
     "    plt.ylabel('probability')\n",
-    "    plt.xscale('log')\n",
     "    plt.legend()\n",
     "        \n",
     "fig, axs = plot_performance(err_dict, xs=df_freq, \n",
@@ -784,6 +815,7 @@
     "min_value = np.inf\n",
     "max_value = -np.inf\n",
     "\n",
+    "distances_grid = np.arange(0, max(row.df_dist) + 1)\n",
     "distances_idx = np.argmin(np.abs(distances_grid[:, None] - row.df_dist[None, :]), axis=0)\n",
     "\n",
     "results = pd.DataFrame(columns=[\"normalization\", \"matrix\", \"values\"])\n",
