Clean up df processing, fix frequency merging

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -79,14 +79,13 @@
     "# exp_name = '2021_02_09_wall_tukey';\n",
     "# exp_name = '2021_02_09_wall';\n",
     "\n",
-    "#exp_name = \"2021_02_23_wall\";  # old buzzer\n",
-    "exp_name = \"2021_02_25_wall\"; # new buzzer\n",
+    "exp_name = \"2021_02_23_wall\";  # old buzzer\n",
+    "#exp_name = \"2021_02_25_wall\"; # new buzzer\n",
     "#exp_name = \"2021_03_01_flying\"\n",
     "# exp_name = '2020_12_9_rotating';\n",
     "# exp_name = '2020_11_26_wall';\n",
     "# fname = f'results/{exp_name}_real.pkl'\n",
     "\n",
-    "overwrite = False # generate new results\n",
     "mic_type = \"audio_deck\"\n",
     "motors = 0 #\"all45000\""
    ]
@@ -99,24 +98,13 @@
    },
    "outputs": [],
    "source": [
-    "from pandas_utils import filter_by_dict\n",
     "from wall_detector import WallDetector\n",
     "from generate_df_results import wall_detector_from_df\n",
     "\n",
     "wall_detector = WallDetector()\n",
     "backup_exists = wall_detector.fill_from_backup(exp_name, mic_type, motors)\n",
-    "\n",
-    "if (not backup_exists) or overwrite:\n",
-    "    fname = f\"../experiments/{exp_name}/all_data.pkl\"\n",
-    "    # fname = f'../experiments/{exp_name}/battery_data.pkl' # for 2021_02_09_wall, battery study\n",
-    "    try:\n",
-    "        df_all = pd.read_pickle(fname)\n",
-    "        print(\"read\", fname)\n",
-    "    except Exception as e:\n",
-    "        print(e)\n",
-    "        print(\"Error: run wall_analysis.py to parse experiments.\")\n",
-    "    wall_detector = wall_detector_from_df(df_all, exp_name, mic_type, motors)\n",
-    "    wall_detector.backup(exp_name, mic_type, motors)"
+    "if not backup_exists: \n",
+    "    print('generate data using script generate_df_results.')"
    ]
   },
   {
@@ -144,7 +132,7 @@
     "from wall_detector import prune_df_matrix\n",
     "df_matrix_raw, df_dist, df_freq_raw = wall_detector.get_df_matrix()\n",
     "df_matrix, df_freq, indices = prune_df_matrix(\n",
-    "    df_matrix_raw, df_freq_raw, ratio_missing_allowed=0.2, verbose=True\n",
+    "    df_matrix_raw, df_freq_raw, verbose=True\n",
     ")"
    ]
   },
@@ -212,7 +200,6 @@
     "    return fig_f\n",
     "\n",
     "valid_freqs = df_freq\n",
-    "plot_freqs = [valid_freqs[0], valid_freqs[len(valid_freqs) // 2], valid_freqs[-2]]\n",
     "for i, f in enumerate(df_freq):\n",
     "    slice_exp = df_matrix[:, i, :]\n",
     "    if np.any(np.isnan(slice_exp)):\n",
@@ -223,8 +210,7 @@
     "        slice_exp=slice_exp,\n",
     "        slice_the=slice_the,\n",
     "        dist=df_dist,\n",
-    "    )\n",
-    "    break"
+    "    )"
    ]
   },
   {
@@ -294,42 +280,28 @@
    },
    "outputs": [],
    "source": [
-    "from calibration import get_calibration_function_matrix\n",
-    "from calibration import get_calibration_function_new\n",
-    "from calibration import get_calibration_function, get_calibration_function_dict\n",
+    "from calibration import get_calibration_function_fit\n",
+    "from calibration import get_calibration_function_median\n",
     "\n",
     "fig, ax = plt.subplots()\n",
-    "calib_function_old = get_calibration_function(ax=ax)\n",
-    "ax.set_title(\"old calibration\")\n",
+    "calib_function_median = get_calibration_function_median(exp_name, mic_type, ax=ax)\n",
+    "ax.set_title(\"median\")\n",
     "\n",
     "fig, ax = plt.subplots()\n",
-    "filter_dict = {\n",
-    "    'exp_name': exp_name, \n",
-    "    'motors': 0,\n",
-    "    'mic_type': mic_type\n",
-    "}\n",
-    "calib_function = get_calibration_function_dict(**filter_dict, ax=ax)\n",
-    "ax.set_ylim(1, 10)\n",
-    "ax.set_yscale(\"linear\")\n",
-    "ax.set_title(\"new calibration\")\n",
+    "calib_function_median_one = get_calibration_function_median(\n",
+    "    exp_name, mic_type, ax=ax, fit_one_gain=True\n",
+    ")\n",
+    "ax.set_title(\"median one\")\n",
     "\n",
     "fig, ax = plt.subplots()\n",
-    "calib_function_median = get_calibration_function_new(exp_name, mic_type, method=\"median\", ax=ax)\n",
-    "ax.set_yscale(\"linear\")\n",
-    "ax.set_ylim(0, 10)\n",
-    "ax.set_title(\"new calibration, median\")\n",
+    "calib_function_fit = get_calibration_function_fit(exp_name, mic_type, ax=ax)\n",
+    "ax.set_title(\"fit\")\n",
     "\n",
     "fig, ax = plt.subplots()\n",
-    "calib_function_fit = get_calibration_function_new(exp_name, mic_type, method=\"fit\", ax=ax)\n",
-    "ax.set_yscale(\"linear\")\n",
-    "ax.set_ylim(0, 10)\n",
-    "ax.set_title(\"new calibration, fit\")\n",
-    "#\n",
-    "fig, ax = plt.subplots()\n",
-    "calib_function_fit_one = get_calibration_function_new(exp_name, mic_type, method=\"fit-one\", ax=ax)\n",
-    "ax.set_yscale(\"linear\")\n",
-    "ax.set_ylim(0, 10)\n",
-    "ax.set_title(\"new calibration, fit one\")"
+    "calib_function_fit_one = get_calibration_function_fit(\n",
+    "    exp_name, mic_type, ax=ax, fit_one_gain=True\n",
+    ")\n",
+    "ax.set_title(\"fit one\")"
    ]
   },
   {
@@ -353,8 +325,8 @@
     "method_dict = {\n",
     "    'raw': \"\",\n",
     "    'theoretical': \"\",\n",
-    "    'calibration-old': calib_function,\n",
     "    'calibration-median': calib_function_median,\n",
+    "    'calibration-median-one': calib_function_median_one,\n",
     "    'calibration-fit': calib_function_fit,\n",
     "    'calibration-fit-one': calib_function_fit_one,\n",
     "    #'calibration-online': \"calibration-online\",\n",
@@ -406,14 +378,12 @@
     "fname = f\"{exp_name}_{motors}\"\n",
     "\n",
     "for normalization, df in results.groupby(\"normalization\", sort=False):\n",
-    "\n",
     "    matrix = df.iloc[0].matrix\n",
     "    n_mics = matrix.shape[0]\n",
     "    fig, axs = plt.subplots(1, n_mics, sharey=True)\n",
     "    fig.set_size_inches(n_mics*5, 5)\n",
     "    axs[0].set_ylabel('frequency [Hz]')\n",
     "    for i in range(n_mics):\n",
-    "        df_the = df_theory_pruned[i, :, distances_idx].T\n",
     "        df_exp = df.iloc[0].matrix[i]\n",
     "        ax, im = plot_df_matrix(\n",
     "            df_dist,\n",
@@ -436,6 +406,36 @@
    "metadata": {},
    "source": [
     "# 3. Evaluate algorithm performance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "normalize_method = \"calibration-fit\"\n",
+    "method = method_dict[normalize_method]\n",
+    "matrix = results.loc[results.normalization == normalize_method].iloc[0].matrix\n",
+    "\n",
+    "distance = 10\n",
+    "mic_idx = 1\n",
+    "freq_slice = matrix[mic_idx, :, distance]\n",
+    "plt.figure()\n",
+    "plt.plot(df_freq, freq_slice)\n",
+    "\n",
+    "noisy_freq = df_freq + np.random.normal(scale=10, size=len(df_freq))\n",
+    "freq_slice_raw, used_freq, stds = wall_detector.get_frequency_slice_fixed(\n",
+    "    noisy_freq, distance=distance, normalize_method=method, mics=[mic_idx], verbose=True\n",
+    ")\n",
+    "plt.plot(used_freq, freq_slice_raw[0])"
    ]
   },
   {
@@ -468,10 +468,16 @@
     "                    slice_exp = slice_exp[:, 0]\n",
     "                    std = 1\n",
     "                else:\n",
-    "                    slice_exp, freqs, stds = wall_detector.get_frequency_slice(\n",
-    "                        distance, normalize_method=normalize_method, mics=[mic_idx])\n",
+    "                    #slice_exp, freqs, stds = wall_detector.get_frequency_slice(\n",
+    "                    #    distance, normalize_method=normalize_method, mics=[mic_idx])\n",
+    "                    slice_exp, freqs, stds = wall_detector.get_frequency_slice_fixed(\n",
+    "                        df_freq, distance, normalize_method=normalize_method, mics=[mic_idx])\n",
+    "                    slice_exp = slice_exp[0]\n",
     "                    std = stds[0]\n",
-    "                    slice_exp = slice_exp[0, :]\n",
+    "                    \n",
+    "                    #matrix_exp = results.loc[results.normalization==method].iloc[0].matrix\n",
+    "                    #slice_exp = matrix_exp[i_mic, :, i_d]\n",
+    "                    #freqs = df_freq\n",
     "                #slice_exp = fill_nans(slice_exp, freqs)\n",
     "\n",
     "                proba_cost = get_probability_cost(\n",
@@ -520,9 +526,11 @@
     "    for mic, df_mic in df.groupby(\"mic\"):\n",
     "        absolute_err = pd.pivot_table(df_mic, index=\"distance\", values=\"error\", columns=\"method\")\n",
     "        fig, axs = plot_performance(absolute_err, xs=distances, xlabel=\"distance [cm]\", ylabel=\"absolute error [cm]\")\n",
-    "        axs[0, 1].set_xlim(-1, max(distances))\n",
-    "        axs[0, 0].set_title(f'mic{mic}, {titles[key]}')\n",
     "        axs[0, 0].grid()\n",
+    "        #axs[0, 0].set_title(f'mic{mic}, {titles[key]}')\n",
+    "        #axs[0, 1].set_title(f'mic{mic}, {titles[key]}')\n",
+    "        fig.suptitle(f'mic{mic}, {titles[key]}')\n",
+    "        axs[0, 1].set_xlim(-1, max(distances))\n",
     "        \n",
     "        fname_here = f\"plots/{fname}_{key}_mic{mic}_frequency_performance.png\"\n",
     "        save_fig(fig, fname_here)"
@@ -541,6 +549,7 @@
     "mic_idx = 1\n",
     "\n",
     "chosen_methods = [\"raw\", \"calibration-median\", \"theoretical\"]\n",
+    "#chosen_methods = method_dict.keys()\n",
     "plot_combis = [{\n",
     "    'distance': 11,\n",
     "    'algorithms': [\"cost\", \"bayes\"]\n",
