Created new estimators for multi-mic algorithms

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -35,30 +35,28 @@
     "from simulation import get_setup\n",
     "\n",
     "distance = 5\n",
+    "yaws = [0, 15, 30]\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(5, 5)\n",
-    "for yaw_deg, marker in zip([0,15,30], [\"o\", \"*\", \"x\"]):\n",
-    "    source, mic_positions = get_setup(distance_cm=distance, yaw_deg=yaw_deg)\n",
-    "    source_image = [source[0], -source[1]]\n",
-    "    for i, mic in enumerate(mic_positions):\n",
-    "        label = f\"mic{i}\" if yaw_deg == 0 else None\n",
-    "        ax.scatter(*mic*100, label=label, marker=marker, color=f\"C{i}\")\n",
-    "    ax.scatter(*mic*100, label=f\"yaw {yaw_deg}deg\", marker=marker, color=f\"C{i}\")\n",
-    "ax.plot([4.8*100, 5.2*100], [0, 0], color=\"k\", label=\"wall\")\n",
-    "ax.set_title(f\"setup for distance={distance}cm and different angles\")\n",
+    "\n",
+    "source, mic_positions = get_setup(distance_cm=distance, yaw_deg=yaws[0])\n",
+    "[ax.scatter(*mic[:2], label=f'mic{i}, yaw={yaws[0]}deg', marker='x') for i, mic in enumerate(mic_positions)]\n",
+    "for yaw_deg in yaws[1:]:\n",
+    "    source, mic_positions = get_setup(distance_cm=distance, yaw_deg=yaw_deg, ax=ax)\n",
+    "ax.set_title(f\"setup for distance={distance}cm and angles={yaws}deg\")\n",
     "\n",
     "handles, labels = ax.get_legend_handles_labels()\n",
-    "h_mics = {l: h for h, l in zip(handles, labels) if 'mic' in l}\n",
-    "l1 = ax.legend(h_mics.values(), h_mics.keys(),loc=\"lower right\", bbox_to_anchor=[.3, 0])\n",
+    "h_mics = {l: h for h, l in zip(handles, labels) if 'yaw=' in l}\n",
+    "l1 = ax.legend(h_mics.values(), h_mics.keys(),loc=\"lower right\", bbox_to_anchor=[.5, 0])\n",
     "\n",
     "h_other = {l: h for h, l in zip(handles, labels) if not 'mic' in l}\n",
-    "ax.legend(h_other.values(), h_other.keys(),loc=\"lower left\", bbox_to_anchor=[.3, 0])\n",
+    "ax.legend(h_other.values(), h_other.keys(),loc=\"lower left\", bbox_to_anchor=[.5, 0])\n",
     "ax.add_artist(l1)\n",
     "\n",
     "ax.set_xlabel(\"x [cm]\")\n",
     "ax.set_ylabel(\"y [cm]\")\n",
-    "ax.axis(\"equal\")\n",
+    "#ax.axis(\"equal\")\n",
     "\n",
     "fig.savefig(f'plots/setup.pdf', bbox_inches='tight')"
    ]
@@ -210,7 +208,8 @@
     "        slice_exp=slice_exp,\n",
     "        slice_the=slice_the,\n",
     "        dist=df_dist,\n",
-    "    )"
+    "    )\n",
+    "    break"
    ]
   },
   {
@@ -413,13 +412,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "normalize_method = \"calibration-fit\"\n",
     "method = method_dict[normalize_method]\n",
@@ -431,7 +423,7 @@
     "plt.figure()\n",
     "plt.plot(df_freq, freq_slice)\n",
     "\n",
-    "noisy_freq = df_freq + np.random.normal(scale=10, size=len(df_freq))\n",
+    "noisy_freq = df_freq + np.random.normal(scale=20, size=len(df_freq))\n",
     "freq_slice_raw, used_freq, stds = wall_detector.get_frequency_slice_fixed(\n",
     "    noisy_freq, distance=distance, normalize_method=method, mics=[mic_idx], verbose=True\n",
     ")\n",
@@ -446,6 +438,7 @@
    "source": [
     "from inference import get_probability_cost, get_probability_bayes\n",
     "from simulation import get_freq_slice_theory\n",
+    "from distance_estimator import DistanceEstimator\n",
     "import progressbar\n",
     "\n",
     "err_df = pd.DataFrame(columns=['method', 'mic', 'distance', 'error', 'algorithm'])\n",
@@ -455,8 +448,15 @@
     "mic_indices = range(4)\n",
     "n_mics = len(mic_indices)\n",
     "\n",
+    "distance_estimators = {}\n",
+    "\n",
     "with progressbar.ProgressBar(max_value=len(distances)) as p:\n",
     "    for i_d, distance in enumerate(distances):\n",
+    "        \n",
+    "        distance_estimators = {\n",
+    "            k: DistanceEstimator() for k in method_dict.keys()\n",
+    "        }\n",
+    "        \n",
     "        p.update(i_d)\n",
     "        for i_mic, mic_idx in enumerate(mic_indices):\n",
     "            for method, normalize_method in method_dict.items():\n",
@@ -491,21 +491,33 @@
     "                    distance_range=[min(distances_grid), max(distances_grid)],\n",
     "                    sigma=std\n",
     "                )\n",
+    "                \n",
+    "                distance_estimators[method].add_distribution(distances_bayes, proba_bayes, mic_idx)\n",
     "\n",
     "                for algo, proba, distances_here in zip(\n",
     "                    [\"cost\", \"bayes\"],\n",
     "                    [proba_cost, proba_bayes],\n",
     "                    [distances_grid, distances_bayes],\n",
     "                ):\n",
-    "                    d_idx = np.argmax(proba)\n",
-    "                    d = distances_here[d_idx]\n",
+    "                    d = DistanceEstimator.get_estimate(distances_here, proba)\n",
     "                    err_df.loc[len(err_df), :] = {\n",
     "                        'error': d - distance,\n",
     "                        'mic': mic_idx,\n",
     "                        'distance': distance,\n",
     "                        'method': method, \n",
     "                        'algorithm': algo\n",
-    "                    }"
+    "                    }\n",
+    "                    \n",
+    "        for method, distance_estimator in distance_estimators.items():\n",
+    "            distances_here, proba = distance_estimator.get_distance_distribution()\n",
+    "            d = DistanceEstimator.get_estimate(distances_here, proba)\n",
+    "            err_df.loc[len(err_df), :] = {\n",
+    "                'error': d - distance,\n",
+    "                'mic': -1,\n",
+    "                'distance': distance,\n",
+    "                'method': method, \n",
+    "                'algorithm': 'bayes-combination' \n",
+    "            }"
    ]
   },
   {
