--- a/notebooks/WallStudy.ipynb
+++ b/notebooks/WallStudy.ipynb
@@ -374,7 +374,7 @@
    },
    "outputs": [],
    "source": [
-    "from wall_detector import (\n",
+    "from inference import (\n",
     "    get_probability_cost,\n",
     "    get_probability_fft,\n",
     "    get_probability_bayes,\n",
@@ -418,13 +418,13 @@
     "\n",
     "        slice_f += np.random.normal(scale=sigma_y, size=len(slice_f))\n",
     "\n",
-    "        d_fft, p_fft = get_probability_fft(slice_f, freq, n_max=n_max)\n",
+    "        d_fft, p_fft, diff = get_probability_fft(slice_f, freq, n_max=n_max)\n",
     "        p_cost = get_probability_cost(slice_f, freq, distances_grid)\n",
-    "        d_bayes_sigma, p_bayes_sigma = get_probability_bayes(\n",
-    "            slice_f, freq, n_max=n_max, sigma=sigma_y  # n_max\n",
+    "        d_bayes_sigma, p_bayes_sigma, diff = get_probability_bayes(\n",
+    "            slice_f, freq, n_max=n_max, sigma=sigma_y\n",
     "        )\n",
-    "        d_bayes, p_bayes = get_probability_bayes(\n",
-    "            slice_f, freq, n_max=n_max  # n_max\n",
+    "        d_bayes, p_bayes, diff = get_probability_bayes(\n",
+    "            slice_f, freq, n_max=n_max\n",
     "        )\n",
     "\n",
     "        axs[i].set_ylabel(\"amplitude [-]\")\n",
@@ -451,6 +451,87 @@
     "    axs[i].set_xlabel(\"frequency [Hz]\")\n",
     "    print(\"max distance\", d_fft[-1])\n",
     "    save_fig(fig_all, f\"plots/simulation/study_fslices_{str(sigma_y).replace('.','-')}.pdf\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### combination of multiple mics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "from estimators import DistanceEstimator, get_estimate\n",
+    "def test_distance_estimator(chosen_mics=range(4), distance_cm=10, yaw_deg=0):\n",
+    "    from estimators import DistanceEstimator, get_estimate\n",
+    "    from geometry import D_OFFSET\n",
+    "    n_max = 1000\n",
+    "    frequencies = np.linspace(1000, 5000, 32)\n",
+    "    slices_f = get_freq_slice_theory(frequencies, distance_cm, chosen_mics=chosen_mics, \n",
+    "                                     yaw_deg=yaw_deg)\n",
+    "    \n",
+    "    distance_estimator = DistanceEstimator()\n",
+    "    plt.figure()\n",
+    "    for i, mic_idx in enumerate(chosen_mics):\n",
+    "        slice_f = slices_f[:, i]\n",
+    "        d_bayes, p_bayes, diff_cm = get_probability_bayes(\n",
+    "            slice_f, frequencies, n_max=n_max\n",
+    "        )\n",
+    "        #diff_cm = np.array([diff_cm[np.argmax(p_bayes)]])\n",
+    "        #p_bayes = np.array([1.0])\n",
+    "        #distance_estimator.add_distribution(diff_cm*1e-2, p_bayes, mic_idx)\n",
+    "        distance_estimator.add_distribution(diff_cm*1e-2, p_bayes, mic_idx)\n",
+    "        \n",
+    "        plt.scatter(diff_cm, p_bayes, color=f'C{mic_idx}', label=f'mic{mic_idx}')\n",
+    "    plt.xlabel('path difference [cm]')\n",
+    "    plt.legend()\n",
+    "    \n",
+    "    distance_estimate = distance_cm * 1e-2 #+ D_OFFSET\n",
+    "    thetas, probs = distance_estimator.get_angle_distribution(distance_estimate=distance_estimate)\n",
+    "    theta = get_estimate(thetas, probs)\n",
+    "    fig, axs = plt.subplots(1, 2)\n",
+    "    fig.set_size_inches(10, 5)\n",
+    "    axs[0].scatter(thetas, probs)\n",
+    "    axs[0].set_xlabel('wall angle [deg]')\n",
+    "    axs[0].set_ylabel('probability [-]')\n",
+    "    axs[0].axvline(theta)\n",
+    "    \n",
+    "    ds, probs = distance_estimator.get_distance_distribution()\n",
+    "    d = get_estimate(ds, probs)\n",
+    "    \n",
+    "    axs[1].scatter(ds * 100, probs)\n",
+    "    axs[1].set_xlabel('wall distance [cm]')\n",
+    "    axs[1].set_ylabel('probability [-]')\n",
+    "    axs[1].axvline(d * 100)\n",
+    "    fig.suptitle(f\"d {distance_cm}cm, yaw {yaw_deg}deg, mics {chosen_mics}\")\n",
+    "    \n",
+    "yaw_deg = 0\n",
+    "distance_cm = 20\n",
+    "distance_estimator = DistanceEstimator()\n",
+    "distance_estimator.context.plot(distance=distance_cm*1e-2, yaw_deg=yaw_deg)\n",
+    "test_distance_estimator(chosen_mics=range(4), yaw_deg=yaw_deg, distance_cm=distance_cm)\n",
+    "for mic in range(4):\n",
+    "    test_distance_estimator(chosen_mics=[mic], yaw_deg=yaw_deg, distance_cm=distance_cm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_distance_estimator(distance_cm=10)\n",
+    "test_distance_estimator(distance_cm=30)\n",
+    "test_distance_estimator(yaw_deg=50)\n",
+    "for mic in range(4):\n",
+    "    test_distance_estimator(chosen_mics=[mic], yaw_deg=70)"
    ]
   },
   {
@@ -1201,13 +1282,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1222,28 +1296,29 @@
    "source": [
     "from geometry import *\n",
     "\n",
-    "distance = 1\n",
-    "yaw_deg = 45\n",
+    "distance = 3\n",
+    "yaw_deg = 70 #+ mic_idx * 90\n",
     "\n",
-    "#context = Context.get_random_setup(n_mics=4)\n",
-    "context = Context.get_crazyflie_setup(yaw_offset=-42)\n",
+    "#context = Context.get_crazyflie_setup()\n",
+    "context = Context.get_standard_setup()\n",
     "\n",
-    "plt.scatter(0, 0, color='black', marker='x')\n",
-    "[plt.scatter(*mic[:2], label=f'mic{i}') for i, mic in enumerate(context.mics)]\n",
-    "plt.scatter(*context.source[:2], label='source')\n",
-    "\n",
-    "n = get_normal(distance, yaw_deg)[:2]\n",
-    "plt.plot([0, n[0]], [0, n[1]])\n",
-    "\n",
-    "s = context.get_source_image(n)\n",
-    "plt.scatter(*s[:2], label='image source')\n",
-    "plt.legend()\n",
-    "plt.axis('equal')\n",
-    "pass\n",
-    "\n",
-    "mic_idx = 0\n",
-    "delta = context.get_delta_from_normal(n, mic_idx)\n",
-    "print(delta)"
+    "for mic_idx in range(4):\n",
+    "    #yaw_deg = 45 + mic_idx * 90\n",
+    "    context.source = context.mics[mic_idx] * 2\n",
+    "    n = get_normal(distance, yaw_deg)[:2]\n",
+    "    \n",
+    "    context.plot(normal=n)\n",
+    "    \n",
+    "    delta = context.get_delta_from_normal(n, mic_idx)\n",
+    "    \n",
+    "    distance_est = context.get_total_distance(delta, yaw_deg, mic_idx)\n",
+    "    source_distance = context.get_source_distance(delta, yaw_deg, mic_idx)\n",
+    "    yaw_est = context.get_angles(delta, source_distance, mic_idx)\n",
+    "    print(yaw_est)\n",
+    "    #assert delta_est == 2, delta_est\n",
+    "    #assert source_distance == 1, source_distance\n",
+    "    np.testing.assert_allclose(distance_est, distance)\n",
+    "    assert yaw_deg in yaw_est, (yaw_est, yaw_deg)"
    ]
   },
   {
@@ -1251,21 +1326,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from geometry import get_deltas_from_global\n",
-    "delta2, d02 = get_deltas_from_global(yaw_deg, distance, mic_idx=0)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from geometry import get_orthogonal_distance_from_normal, get_orthogonal_distance_from_global\n",
-    "d1 = get_orthogonal_distance_from_normal(yaw_deg, delta1*1e2, mic_idx)\n",
-    "print(d1)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
